# idleon_base

./: .gitignore  AGENTS.md  LICENSE
context/: base_context.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/minehead/: StatusBar.tsx  UpgradeDetails.tsx
frontend/src/components/profile/: ConfigUpload.tsx
frontend/src/pages/: IconPicker.tsx  MineheadPage.tsx
frontend/src/styles/: globals.css
projects/AFKMCTracker/: value_changes.csv
projects/AFKMCTracker/src/: main.py
projects/gaming_monte_carlo/: AGENTS.md  pyproject.toml
projects/gaming_monte_carlo/context/: project_context.md
projects/gaming_monte_carlo/resources/: mc_config.json
projects/gaming_monte_carlo/src/gaming_monte_carlo/: main.py
projects/gaming_monte_carlo/src/gaming_monte_carlo/simulation/: analysis.py  engine.py  metrics.py  rules.py  state.py
projects/gaming_monte_carlo/tests/: test_smoke.py
shared/: pyproject.toml
staging/shared/: pyproject.toml
staging/shared/src/idleonlib/math_utils/: logs.py
staging/shared/src/idleonlib/profiles/: user_profile.py
staging/shared/src/idleonlib/profiles/parsers/: config_json.py  utils.py
staging/shared/src/idleonlib/profiles/parsers/world5/: __init__.py
staging/shared/src/idleonlib/profiles/profile_data/world5/: world5_profile_data.py
staging/shared/src/idleonlib/worlds/world5/hole/: schematics.py
staging/shared/src/idleonlib/worlds/world7/minehead/: formulas.py
staging/shared/src/idleonlib/worlds/world7/research/: __init__.py
tools/: extract_default_pak.py
(+25 files in other folders)
